Bug 592877, fixed widget alignment for rtl

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -3528,7 +3528,6 @@ background-position:left -303px;
 .html-rtl li.friendfeed,
 .html-rtl li.myspace,
 .html-rtl a.subscribe,
-.html-rtl a.share,
 .html-rtl a.addons,
 .html-rtl a.collections,
 .html-rtl a.subscribers,
